src/test/deca/context/invalid/created/Objet/ProtectedSelection.deca
// Description:
//  Test d'accès à un attribut protégé
// Resultats:
//  PrivateSelection.deca:8:17: Error: Unauthorized access to the protected field 'x'

class A {
    protected int x;
}

class X {
    void m(){
        A a = new A();
        println(a.x) ; // Erreur contextuelle : x est protege
    }
}

{
    X x = new X();
    x.m();
}